# ROS-Hexapod

./: README.md
install/: local_setup.sh  setup.sh
install/hexapod_description/share/hexapod_description/: package.dsv  package.ps1  package.sh  package.xml
install/hexapod_description/share/hexapod_description/config/: controller_configuration.yaml  controller_configurationOneLeg.yaml  controller_configurationPo copy.yaml  controller_configurationPo.yaml  controller_configurationtraj.yaml
install/hexapod_description/share/hexapod_description/launch/: control1.launch.py  load_world_into_gazebo.launch.py  position1.launch.py  position2.launch.py  position3.launch.py
install/hexapod_description/share/hexapod_description/meshes/: base_link_collision.stl  component10_1.stl  component11_1_collision.stl  component12_1_collision.stl  component13_1.stl  component15_1_collision.stl  component16_1_collision.stl  component1_1_collision.stl  component2_1_collision.stl  component3_1_collision.stl  component6_1_collision.stl  component7_1.stl  component9_1_collision.stl  leg1_link1_collision.stl  leg1_link3_collision.stl  leg2_link1_collision.stl  leg2_link2_collision.stl  leg3_link3_collision.stl  leg4_link3_collision.stl  leg5_link1_collision.stl  leg6_link2_collision.stl  leg6_link3_collision.stl
install/hexapod_description/share/hexapod_description/urdf/: hexapodOneLeg.xacro  hexapod_Backup_Latest.xacro  hexapod_pos1.xacro
log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/action/: Patrol_BACKUP.action
src/hexapod_description/: setup.py
src/hexapod_description/config/: controller_configurationPo copy 2.yaml
src/hexapod_description/hexapod_description/: controller1Backuppy  controller1OneTest.py  controller1____oneLegNormal.py  controllerOLd.py  controllerTrigo.py  controllerwrong.py
src/hexapod_description/launch/: control2.launch.py  controlBack.launch.py  controlSpot.launch.py  controlTrigo.launch.py  gazebo.launch.py  hexapod.launch.py  position1.launch copy.py  start_world.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/patrol_action_client/: package.xml  setup.cfg  setup.py
src/patrol_action_server/: package.xml  setup.cfg  setup.py
(+65 files in other folders)
