<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>hexapod_description</name>
  <version>0.0.0</version>
<description>The hexapod_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>action_msgs</depend>
  
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_interfaces</depend>



  
  <depend>tf2</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>position_controllers</depend>  
     
        

  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>my_position_controller</exec_depend>
  <exec_depend>my_joint_state_broadcaster</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
 
  <exec_depend>ament_index_python</exec_depend>
  

  <exec_depend>launch</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
